--- a/SnowTime/customCell.xib
+++ b/SnowTime/customCell.xib
@@ -75,6 +75,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9tR-BS-Hbq">
+                                <rect key="frame" x="204" y="23" width="253" height="189"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <accessibility key="accessibilityConfiguration" identifier="customCell"/>
@@ -106,6 +110,7 @@
             <connections>
                 <outlet property="addressLabel" destination="0HW-tj-bOy" id="n3w-7I-jir"/>
                 <outlet property="distanceLabel" destination="DZO-qX-Xr8" id="kZy-bO-Cgl"/>
+                <outlet property="lodgeImage" destination="9tR-BS-Hbq" id="Ib3-XE-6bO"/>
                 <outlet property="nameLabel" destination="NNi-04-yB0" id="Nxm-S8-gqr"/>
                 <outlet property="parentView" destination="gah-q7-YnI" id="z8S-qz-k94"/>
                 <outlet property="priceLabel" destination="IbU-Po-PnI" id="M7K-xp-e5N"/>
